--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -5,10 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>Lazard Email Template - Master</title>
-
-		<!-- Template Styles -->
-		<link rel="stylesheet" type="text/css" href="/src/styles/index.css">
-
+		<link rel="stylesheet" type="text/css" href="../../src/styles/index.css">
 	</head>
 	<body>
 		<center class="wrapper">
@@ -17,8 +14,8 @@
 				Module: Preheader
 			-->
 			<table name="module_preheader" class="module">
-				<tr class="">
-					<td style="display: block; padding: 8px 0 8px 0; text-align: center;">
+				<tr>
+					<td class="content-padding sm" style="display: block; text-align: center;">
 						<a href="#">Preheader text will go here</a>
 					</td>
 				</tr>
@@ -38,9 +35,9 @@
 
 			<!--
 				Module: logo-banner
-				Type: Sapphine variant
+				Type: Sapphire variant
 			-->
-			<table name="module_logo-banner_default" class="module variant-sapphine">
+			<table name="module_logo-banner_default" class="module sapphire">
 				<tr class="content">
 					<td class="content-padding">
 						<img src="/images/LAM_Logo-2024-white.svg" alt="" width="124px">
@@ -52,7 +49,7 @@
 				Module: logo-banner
 				Type: Sage variant
 			-->
-			<table name="module_logo-banner_default" class="module variant-sage">
+			<table name="module_logo-banner_default" class="module sage">
 				<tr class="content">
 					<td class="content-padding">
 						<img src="/images/LAM_Logo-2024.svg" alt="" width="124px">
@@ -64,7 +61,7 @@
 				Module: logo-banner
 				Type: Onyx variant
 			-->
-			<table name="module_logo-banner_default" class="module variant-onyx">
+			<table name="module_logo-banner_default" class="module onyx">
 				<tr class="content">
 					<td class="content-padding">
 						<img src="/images/LAM_Logo-2024-white.svg" alt="" width="124px">
@@ -76,7 +73,7 @@
 				Module: logo-banner
 				Type: Clarity variant
 			-->
-			<table name="module_logo-banner_default" class="module variant-clarity">
+			<table name="module_logo-banner_default" class="module clarity">
 				<tr class="content">
 					<td class="content-padding">
 						<img src="/images/LAM_Logo-2024.svg" alt="" width="124px">
@@ -88,7 +85,7 @@
 				Module: logo-banner
 				Type: Currency variant
 			-->
-			<table name="module_logo-banner_default" class="module variant-currency">
+			<table name="module_logo-banner_default" class="module currency">
 				<tr class="content">
 					<td class="content-padding">
 						<img src="/images/LAM_Logo-2024-white.svg" alt="" width="124px">
@@ -110,9 +107,9 @@
 
 			<!--
 				Module: Email-banner-one-column
-				Type: Sapphine variant
+				Type: Sapphire variant
 			-->
-			<table name="module_logo-banner_default" class="module variant-sapphine">
+			<table name="module_logo-banner_default" class="module sapphire">
 				<tr class="content">
 					<tr class="content">
 						<td class="banner-one-column" style="background-image: url('/images/Background-1.png');"></td>
@@ -124,7 +121,7 @@
 				Module: Email-banner-one-column
 				Type: Sage variant
 			-->
-			<table name="module_logo-banner_default" class="module variant-sage">
+			<table name="module_logo-banner_default" class="module sage">
 				<tr class="content">
 					<td class="banner-one-column" style="background-image: url('/images/Background-3.png');"></td>
 				</tr>
@@ -134,7 +131,7 @@
 				Module: Email-banner-one-column
 				Type: Onyx variant
 			-->
-			<table name="module_logo-banner_default" class="module variant-onyx">
+			<table name="module_logo-banner_default" class="module onyx">
 				<tr class="content">
 					<td class="banner-one-column" style="background-image: url('/images/Background-2.png');"></td>
 				</tr>
@@ -144,7 +141,7 @@
 				Module: Email-banner-one-column
 				Type: Clarity variant
 			-->
-			<table name="module_logo-banner_default" class="module variant-clarity">
+			<table name="module_logo-banner_default" class="module clarity">
 				<tr class="content">
 					<td class="banner-one-column" style="background-image: url('/images/Background-1.png');"></td>
 				</tr>
@@ -154,7 +151,7 @@
 				Module: Email-banner-one-column
 				Type: Currency variant
 			-->
-			<table name="module_logo-banner_default" class="module variant-currency">
+			<table name="module_logo-banner_default" class="module currency">
 				<tr class="content">
 					<td class="banner-one-column" style="background-image: url('/images/Background-1.png');"></td>
 				</tr>
@@ -172,6 +169,7 @@
 								<td>
 									<h1>Factor Report</h1>
 									<p>Monthly analysis of global market factors</p>
+									<a href="#" class="btn">Download</a>
 								</td>
 							</tr>
 						</table>
