Added eyebrow component, started the email-heading module

--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -15,7 +15,7 @@
 			-->
 			<table name="module_preheader" class="module">
 				<tr>
-					<td class="content-padding sm" style="display: block; text-align: center;">
+					<td class="container sm" style="display: block; text-align: center;">
 						<a href="#">Preheader text will go here</a>
 					</td>
 				</tr>
@@ -23,11 +23,11 @@
 
 			<!--
 				Module: logo-banner
-				Type: Default
+				Variant: Default
 			-->
-			<table name="module_logo-banner_default" class="module">
+			<table class="module">
 				<tr class="content">
-					<td class="content-padding">
+					<td class="container">
 						<img src="/images/LAM_Logo-2024.svg" alt="" width="124px">
 					</td>
 				</tr>
@@ -35,11 +35,11 @@
 
 			<!--
 				Module: logo-banner
-				Type: Sapphire variant
+				Variant: Sapphire variant
 			-->
-			<table name="module_logo-banner_default" class="module sapphire">
+			<table class="module sapphire">
 				<tr class="content">
-					<td class="content-padding">
+					<td class="container">
 						<img src="/images/LAM_Logo-2024-white.svg" alt="" width="124px">
 					</td>
 				</tr>
@@ -47,11 +47,11 @@
 
 			<!--
 				Module: logo-banner
-				Type: Sage variant
+				Variant: Sage variant
 			-->
-			<table name="module_logo-banner_default" class="module sage">
+			<table class="module sage">
 				<tr class="content">
-					<td class="content-padding">
+					<td class="container">
 						<img src="/images/LAM_Logo-2024.svg" alt="" width="124px">
 					</td>
 				</tr>
@@ -59,11 +59,11 @@
 
 			<!--
 				Module: logo-banner
-				Type: Onyx variant
+				Variant: Onyx variant
 			-->
-			<table name="module_logo-banner_default" class="module onyx">
+			<table class="module onyx">
 				<tr class="content">
-					<td class="content-padding">
+					<td class="container">
 						<img src="/images/LAM_Logo-2024-white.svg" alt="" width="124px">
 					</td>
 				</tr>
@@ -71,11 +71,11 @@
 
 			<!--
 				Module: logo-banner
-				Type: Clarity variant
+				Variant: Clarity variant
 			-->
-			<table name="module_logo-banner_default" class="module clarity">
+			<table class="module clarity">
 				<tr class="content">
-					<td class="content-padding">
+					<td class="container">
 						<img src="/images/LAM_Logo-2024.svg" alt="" width="124px">
 					</td>
 				</tr>
@@ -83,11 +83,11 @@
 
 			<!--
 				Module: logo-banner
-				Type: Currency variant
+				Variant: Currency variant
 			-->
-			<table name="module_logo-banner_default" class="module currency">
+			<table class="module currency">
 				<tr class="content">
-					<td class="content-padding">
+					<td class="container">
 						<img src="/images/LAM_Logo-2024-white.svg" alt="" width="124px">
 					</td>
 				</tr>
@@ -95,9 +95,9 @@
 
 			<!--
 				Module: Email-banner-one-column
-				Type: Default
+				Variant: Default
 			-->
-			<table name="module_logo-banner_default" class="module">
+			<table class="module">
 				<tr class="content">
 					<tr class="content">
 						<td class="banner-one-column" style="background-image: url('/images/Background-1.png');"></td>
@@ -107,9 +107,9 @@
 
 			<!--
 				Module: Email-banner-one-column
-				Type: Sapphire variant
+				Variant: Sapphire variant
 			-->
-			<table name="module_logo-banner_default" class="module sapphire">
+			<table class="module sapphire">
 				<tr class="content">
 					<tr class="content">
 						<td class="banner-one-column" style="background-image: url('/images/Background-1.png');"></td>
@@ -119,9 +119,9 @@
 
 			<!--
 				Module: Email-banner-one-column
-				Type: Sage variant
+				Variant: Sage variant
 			-->
-			<table name="module_logo-banner_default" class="module sage">
+			<table class="module sage">
 				<tr class="content">
 					<td class="banner-one-column" style="background-image: url('/images/Background-3.png');"></td>
 				</tr>
@@ -129,9 +129,9 @@
 
 			<!--
 				Module: Email-banner-one-column
-				Type: Onyx variant
+				Variant: Onyx variant
 			-->
-			<table name="module_logo-banner_default" class="module onyx">
+			<table class="module onyx">
 				<tr class="content">
 					<td class="banner-one-column" style="background-image: url('/images/Background-2.png');"></td>
 				</tr>
@@ -139,9 +139,9 @@
 
 			<!--
 				Module: Email-banner-one-column
-				Type: Clarity variant
+				Variant: Clarity variant
 			-->
-			<table name="module_logo-banner_default" class="module clarity">
+			<table class="module clarity">
 				<tr class="content">
 					<td class="banner-one-column" style="background-image: url('/images/Background-1.png');"></td>
 				</tr>
@@ -149,9 +149,9 @@
 
 			<!--
 				Module: Email-banner-one-column
-				Type: Currency variant
+				Variant: Currency variant
 			-->
-			<table name="module_logo-banner_default" class="module currency">
+			<table class="module currency">
 				<tr class="content">
 					<td class="banner-one-column" style="background-image: url('/images/Background-1.png');"></td>
 				</tr>
@@ -159,17 +159,17 @@
 
 			<!--
 				Module: Email-banner-two-column
-				Type: Default
+				Variant: Default
 			-->
-			<table name="module_logo-banner_default" class="module ">
+			<table class="email-banner-two-column module ">
 				<tr class="content">
-					<td class="layout_two-column content-padding">
+					<td class="layout_two-column container">
 						<table class="column">
 							<tr>
 								<td>
 									<h1>Factor Report</h1>
-									<p>Monthly analysis of global market factors</p>
-									<a href="#" class="btn">Download</a>
+									<p>Monthly analysis of global<br/> market factors</p>
+									<a href="#" class="btn sapphire">Download</a>
 								</td>
 							</tr>
 						</table>
@@ -177,7 +177,185 @@
 						<table class="column">
 							<tr>
 								<td>
-									<p>Col 2</p>
+									<img class="featured-image" src="/images/feature-image-1.png" alt="">
+								</td>
+							</tr>
+						</table>
+					</td>
+				</tr>
+			</table>
+
+			<!--
+				Module: Email-banner-two-column
+				Variant: Sapphire
+			-->
+			<table class="email-banner-two-column module sapphire">
+				<tr class="content">
+					<td class="layout_two-column container">
+						<table class="column">
+							<tr>
+								<td>
+									<h1>Factor Report</h1>
+									<p>Monthly analysis of global<br/> market factors</p>
+									<a href="#" class="btn sapphire secondary">Download</a>
+								</td>
+							</tr>
+						</table>
+
+						<table class="column">
+							<tr>
+								<td>
+									<img class="featured-image" src="/images/feature-image-1.png" alt="">
+								</td>
+							</tr>
+						</table>
+					</td>
+				</tr>
+			</table>
+
+			<!--
+				Module: Email-banner-two-column
+				Variant: Sage
+			-->
+			<table class="email-banner-two-column module sage">
+				<tr class="content">
+					<td class="layout_two-column container">
+						<table class="column">
+							<tr>
+								<td>
+									<h1>Factor Report</h1>
+									<p>Monthly analysis of global<br/> market factors</p>
+									<a href="#" class="btn onyx">Download</a>
+								</td>
+							</tr>
+						</table>
+
+						<table class="column">
+							<tr>
+								<td>
+									<img class="featured-image" src="/images/feature-image-2.png" alt="">
+								</td>
+							</tr>
+						</table>
+					</td>
+				</tr>
+			</table>
+
+			<!--
+				Module: Email-banner-two-column
+				Variant: Onyx
+			-->
+			<table class="email-banner-two-column module onyx">
+				<tr class="content">
+					<td class="layout_two-column container">
+						<table class="column">
+							<tr>
+								<td>
+									<h1>Factor Report</h1>
+									<p>Monthly analysis of global<br/> market factors</p>
+									<a href="#" class="btn onyx secondary">Download</a>
+								</td>
+							</tr>
+						</table>
+
+						<table class="column">
+							<tr>
+								<td>
+									<img class="featured-image" src="/images/feature-image-3.png" alt="">
+								</td>
+							</tr>
+						</table>
+					</td>
+				</tr>
+			</table>
+
+			<!--
+				Module: Email-banner-two-column
+				Variant: Clarity
+			-->
+			<table class="email-banner-two-column module clarity">
+				<tr class="content">
+					<td class="layout_two-column container">
+						<table class="column">
+							<tr>
+								<td>
+									<h1>Factor Report</h1>
+									<p>Monthly analysis of global<br/> market factors</p>
+									<a href="#" class="btn sapphire">Download</a>
+								</td>
+							</tr>
+						</table>
+
+						<table class="column">
+							<tr>
+								<td>
+									<img class="featured-image" src="/images/feature-image-1.png" alt="">
+								</td>
+							</tr>
+						</table>
+					</td>
+				</tr>
+			</table>
+
+			<!--
+				Module: Email-banner-two-column
+				Variant: Currency
+			-->
+			<table class="email-banner-two-column module currency">
+				<tr class="content">
+					<td class="layout_two-column container">
+						<table class="column">
+							<tr>
+								<td>
+									<h1>Factor Report</h1>
+									<p>Monthly analysis of global<br/> market factors</p>
+									<a href="#" class="btn onyx secondary">Download</a>
+								</td>
+							</tr>
+						</table>
+
+						<table class="column">
+							<tr>
+								<td>
+									<img class="featured-image" src="/images/feature-image-3.png" alt="">
+								</td>
+							</tr>
+						</table>
+					</td>
+				</tr>
+			</table>
+
+			<!--
+				Module: Email-heading
+				Variant: Default
+			-->
+			<table class="email-heading module">
+				<tr class="content">
+					<td class="container">
+						<table class="">
+							<!-- 
+								Component: Eyebrow
+								Variant: Default
+							-->
+							<table class="eyebrow">
+								<tr>
+									<td class="circle"></td>
+									<td>What's trending</td>
+								</tr>
+							</table>
+
+							<h1>Lazard <br/> Connect</h1>
+							<p>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
+						</table>
+
+						<table class="">
+							<tr>
+								<td>
+									<!--
+										Component: Button
+										Variant: Sapphire
+									-->
+									<a href="#" class="btn sapphire">Download</a>
 								</td>
 							</tr>
 						</table>
