--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -77,11 +77,11 @@ a {
 	padding: 0 16px 0 16px;
 }
 
-.content-padding {
+.container {
 	padding: 32px 0 32px 0;
 }
 
-.content-padding.sm {
+.container.sm {
 	padding: 8px 0 8px 0;
 }
 /* #EndRegion - Boilerplate */
@@ -147,10 +147,23 @@ a {
 	max-width: 263px;
 	vertical-align: top;
 }
+
+.layout_two-column .featured-image {
+	height: 148px;
+}
+
+.email-banner-two-column p {
+	padding: 20px 0;
+}
+
+.email-heading .container {
+	padding: 48px 0 16px 0;
+}
 /* #End - Module specific styles */
 
 /* Component styles */
 .btn {
+	display: inline-block;
 	padding: 8px 20px;
 	font-size: 12px;
 	text-align: center;
@@ -185,5 +198,21 @@ a {
 .btn.onyx.secondary {
 	background-color: var(--parchment);
 	color: var(--onyx);
+}
+
+.eyebrow {
+	font-size: 10px;
+	line-height: 8px;
+	text-transform: uppercase;
+	margin-bottom: 16px;
+}
+
+.eyebrow .circle {
+	display: inline-block;
+	width: 8px;
+	height: 8px;
+	margin-right: 8px;
+	background-color: var(--onyx);
+	border-radius: 100%;
 }
 /* #End - Component styles */
