--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -168,7 +168,7 @@
 							<tr>
 								<td>
 									<h1>Factor Report</h1>
-									<p>Monthly analysis of global<br/> market factors</p>
+									<p class="py-20">Monthly analysis of global<br/> market factors</p>
 									<a href="#" class="btn sapphire">Download</a>
 								</td>
 							</tr>
@@ -196,7 +196,7 @@
 							<tr>
 								<td>
 									<h1>Factor Report</h1>
-									<p>Monthly analysis of global<br/> market factors</p>
+									<p class="py-20">Monthly analysis of global<br/> market factors</p>
 									<a href="#" class="btn sapphire secondary">Download</a>
 								</td>
 							</tr>
@@ -224,7 +224,7 @@
 							<tr>
 								<td>
 									<h1>Factor Report</h1>
-									<p>Monthly analysis of global<br/> market factors</p>
+									<p class="py-20">Monthly analysis of global<br/> market factors</p>
 									<a href="#" class="btn onyx">Download</a>
 								</td>
 							</tr>
@@ -252,7 +252,7 @@
 							<tr>
 								<td>
 									<h1>Factor Report</h1>
-									<p>Monthly analysis of global<br/> market factors</p>
+									<p class="py-20">Monthly analysis of global<br/> market factors</p>
 									<a href="#" class="btn onyx secondary">Download</a>
 								</td>
 							</tr>
@@ -280,7 +280,7 @@
 							<tr>
 								<td>
 									<h1>Factor Report</h1>
-									<p>Monthly analysis of global<br/> market factors</p>
+									<p class="py-20">Monthly analysis of global<br/> market factors</p>
 									<a href="#" class="btn sapphire">Download</a>
 								</td>
 							</tr>
@@ -308,7 +308,7 @@
 							<tr>
 								<td>
 									<h1>Factor Report</h1>
-									<p>Monthly analysis of global<br/> market factors</p>
+									<p class="py-20">Monthly analysis of global<br/> market factors</p>
 									<a href="#" class="btn onyx secondary">Download</a>
 								</td>
 							</tr>
@@ -327,37 +327,167 @@
 
 			<!--
 				Module: Email-heading
-				Variant: Default
+				Variant: Large Headline, Default
 			-->
 			<table class="email-heading module">
 				<tr class="content">
 					<td class="container">
-						<table class="">
-							<!-- 
-								Component: Eyebrow
-								Variant: Default
-							-->
-							<table class="eyebrow">
-								<tr>
-									<td class="circle"></td>
-									<td>What's trending</td>
-								</tr>
-							</table>
-
-							<h1>Lazard <br/> Connect</h1>
-							<p>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
-						</table>
-
-						<table class="">
+						<table class="column left">
 							<tr>
 								<td>
-									<!--
-										Component: Button
-										Variant: Sapphire
+									<!-- 
+										Component: Eyebrow
+										Variant: Default
 									-->
-									<a href="#" class="btn sapphire">Download</a>
+									<table class="eyebrow">
+										<tr>
+											<td class="circle"></td>
+											<td>What's trending</td>
+										</tr>
+									</table>
+		
+									<h1>Lazard <br/> Connect</h1>
+									<p class="pt-20">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
 								</td>
 							</tr>
+						</table>
+
+						<table class="column right table-content-right">
+								<tr>
+									<td>
+										<!--
+											Component: Button
+											Variant: Sapphire
+										-->
+										<a href="#" class="btn sapphire">Download</a>
+									</td>
+								</tr>
+						</table>
+					</td>
+				</tr>
+			</table>
+
+			<!--
+				Module: Email-heading
+				Variant: Small Headline, Default
+			-->
+			<table class="email-heading module">
+				<tr class="content">
+					<td class="container">
+						<table class="column left">
+							<tr>
+								<td>
+									<!-- 
+										Component: Eyebrow
+										Variant: Default
+									-->
+									<table class="eyebrow">
+										<tr>
+											<td class="circle"></td>
+											<td>What's trending</td>
+										</tr>
+									</table>
+		
+									<h3>Geopolitical and market implications of the conflict in the Middle East</h3>
+									<p class="pt-20">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
+								</td>
+							</tr>
+						</table>
+
+						<table class="column right table-content-right">
+								<tr>
+									<td>
+										<!--
+											Component: Button
+											Variant: Sapphire
+										-->
+										<a href="#" class="btn sapphire">Visit</a>
+									</td>
+								</tr>
+						</table>
+					</td>
+				</tr>
+			</table>
+
+			<!--
+				Module: Email-heading
+				Variant: Large Headline, Sapphire
+			-->
+			<table class="email-heading module sapphire">
+				<tr class="content">
+					<td class="container">
+						<table class="column left">
+							<tr>
+								<td>
+									<!-- 
+										Component: Eyebrow
+										Variant: Default
+									-->
+									<table class="eyebrow light">
+										<tr>
+											<td class="circle"></td>
+											<td>What's trending</td>
+										</tr>
+									</table>
+		
+									<h1>Lazard <br/> Connect</h1>
+									<p class="pt-20">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
+								</td>
+							</tr>
+						</table>
+
+						<table class="column right table-content-right">
+								<tr>
+									<td>
+										<!--
+											Component: Button
+											Variant: Sapphire
+										-->
+										<a href="#" class="btn sapphire secondary">Download</a>
+									</td>
+								</tr>
+						</table>
+					</td>
+				</tr>
+			</table>
+
+			<!--
+				Module: Email-heading
+				Variant: Small Headline, Sapphire
+			-->
+			<table class="email-heading module sapphire">
+				<tr class="content">
+					<td class="container">
+						<table class="column left">
+							<tr>
+								<td>
+									<!-- 
+										Component: Eyebrow
+										Variant: Default
+									-->
+									<table class="eyebrow light">
+										<tr>
+											<td class="circle"></td>
+											<td>What's trending</td>
+										</tr>
+									</table>
+		
+									<h3>Geopolitical and market implications of the conflict in the Middle East</h3>
+									<p class="pt-20">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
+								</td>
+							</tr>
+						</table>
+
+						<table class="column right table-content-right">
+								<tr>
+									<td>
+										<!--
+											Component: Button
+											Variant: Sapphire
+										-->
+										<a href="#" class="btn sapphire secondary">Visit</a>
+									</td>
+								</tr>
 						</table>
 					</td>
 				</tr>
