Added gulpfile injection and parsing

--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -479,6 +479,7 @@
 						</table>
 
 						<table class="column right table-content-right">
+							<tbody>
 								<tr>
 									<td>
 										<!--
@@ -488,6 +489,7 @@
 										<a href="#" class="btn sapphire secondary">Visit</a>
 									</td>
 								</tr>
+							</tbody>
 						</table>
 					</td>
 				</tr>
