--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -10,6 +10,8 @@
 	<body>
 		<center class="wrapper">
 
+			@@include('../modules/preheader/preheader.html')
+
 			<!--
 				Module: Preheader
 			-->
