split modules out for easier management

--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -10,101 +10,51 @@
 	<body>
 		<center class="wrapper">
 
-@@include('modules/preheader/preheader.html')
+@@include('modules/preheader/index.html')
 
 @@include('modules/logo-banner/logo-banner.html', {
 	"img": "/images/LAM_Logo-2024.svg"
 })
 
-@@include('modules/logo-banner/logo-banner.html', {
-	"img": "/images/LAM_Logo-2024-white.svg",
+@@include('modules/logo-banner/logo-banner.sapphire.html')
+
+@@include('modules/logo-banner/logo-banner.onyx.html')
+
+@@include('modules/logo-banner/logo-banner.sage.html')
+
+@@include('modules/logo-banner/logo-banner.clarity.html')
+
+@@include('modules/logo-banner/logo-banner.currency.html')
+
+
+@@include('modules/email-banner-one-column/index.html', {
+	"img": "/images/Background-1.png"
+})
+
+@@include('modules/email-banner-one-column/index.html', {
+	"img": "/images/Background-1.png",
 	"variant": "sapphire"
 })
 
-@@include('modules/logo-banner/logo-banner.html', {
-	"img": "/images/LAM_Logo-2024.svg",
+@@include('modules/email-banner-one-column/index.html', {
+	"img": "/images/Background-3.png",
 	"variant": "sage"
 })
 
-@@include('modules/logo-banner/logo-banner.html', {
-	"img": "/images/LAM_Logo-2024-white.svg",
+@@include('modules/email-banner-one-column/index.html', {
+	"img": "/images/Background-2.png",
 	"variant": "onyx"
 })
 
-@@include('modules/logo-banner/logo-banner.html', {
-	"img": "/images/LAM_Logo-2024.svg",
+@@include('modules/email-banner-one-column/index.html', {
+	"img": "/images/Background-1.png",
 	"variant": "clarity"
 })
 
-@@include('modules/logo-banner/logo-banner.html', {
-	"img": "/images/LAM_Logo-2024-white.svg",
+@@include('modules/email-banner-one-column/index.html', {
+	"img": "/images/Background-1.png",
 	"variant": "currency"
 })
-
-			
-			<!--
-				Module: Email-banner-one-column
-				Variant: Default
-			-->
-			<table class="module">
-				<tr class="content">
-					<tr class="content">
-						<td class="banner-one-column" style="background-image: url('/images/Background-1.png');"></td>
-					</tr>
-				</tr>
-			</table>
-
-			<!--
-				Module: Email-banner-one-column
-				Variant: Sapphire variant
-			-->
-			<table class="module sapphire">
-				<tr class="content">
-					<tr class="content">
-						<td class="banner-one-column" style="background-image: url('/images/Background-1.png');"></td>
-					</tr>
-				</tr>
-			</table>
-
-			<!--
-				Module: Email-banner-one-column
-				Variant: Sage variant
-			-->
-			<table class="module sage">
-				<tr class="content">
-					<td class="banner-one-column" style="background-image: url('/images/Background-3.png');"></td>
-				</tr>
-			</table>
-
-			<!--
-				Module: Email-banner-one-column
-				Variant: Onyx variant
-			-->
-			<table class="module onyx">
-				<tr class="content">
-					<td class="banner-one-column" style="background-image: url('/images/Background-2.png');"></td>
-				</tr>
-			</table>
-
-			<!--
-				Module: Email-banner-one-column
-				Variant: Clarity variant
-			-->
-			<table class="module clarity">
-				<tr class="content">
-					<td class="banner-one-column" style="background-image: url('/images/Background-1.png');"></td>
-				</tr>
-			</table>
-
-			<!--
-				Module: Email-banner-one-column
-				Variant: Currency variant
-			-->
-			<table class="module currency">
-				<tr class="content">
-					<td class="banner-one-column" style="background-image: url('/images/Background-1.png');"></td>
-				</tr>
-			</table>
 
 			<!--
 				Module: Email-banner-two-column
