--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -48,6 +48,16 @@
 	END Email Banner - One Column
 ---------- -->
 
+<!-- ----------
+	Email Banner - Two Column
+---------- -->
+@@include('modules/email-banner-two-column/email-banner-two-column.html')
+
+<!-- @@include('modules/email-banner-two-column/email-banner-two-column.sapphire.html') -->
+<!-- ----------
+	END Email Banner - Two Column
+---------- -->
+
 			<!--
 				Module: Email-banner-two-column
 				Variant: Default
