--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -53,178 +53,22 @@
 ---------- -->
 @@include('modules/email-banner-two-column/email-banner-two-column.html')
 
-<!-- @@include('modules/email-banner-two-column/email-banner-two-column.sapphire.html') -->
+@@include('modules/email-banner-two-column/email-banner-two-column.sapphire.html')
+
+@@include('modules/email-banner-two-column/email-banner-two-column.onyx.html')
+
+@@include('modules/email-banner-two-column/email-banner-two-column.sage.html')
+
+@@include('modules/email-banner-two-column/email-banner-two-column.clarity.html')
+
+@@include('modules/email-banner-two-column/email-banner-two-column.currency.html')
 <!-- ----------
 	END Email Banner - Two Column
 ---------- -->
 
-			<!--
-				Module: Email-banner-two-column
-				Variant: Default
-			-->
-			<table class="email-banner-two-column module ">
-				<tr class="content">
-					<td class="layout_two-column container">
-						<table class="column">
-							<tr>
-								<td>
-									<h1>Factor Report</h1>
-									<p class="py-20">Monthly analysis of global<br/> market factors</p>
-									<a href="#" class="btn sapphire">Download</a>
-								</td>
-							</tr>
-						</table>
-
-						<table class="column">
-							<tr>
-								<td>
-									<img class="featured-image" src="/images/feature-image-1.png" alt="">
-								</td>
-							</tr>
-						</table>
-					</td>
-				</tr>
-			</table>
-
-			<!--
-				Module: Email-banner-two-column
-				Variant: Sapphire
-			-->
-			<table class="email-banner-two-column module sapphire">
-				<tr class="content">
-					<td class="layout_two-column container">
-						<table class="column">
-							<tr>
-								<td>
-									<h1>Factor Report</h1>
-									<p class="py-20">Monthly analysis of global<br/> market factors</p>
-									<a href="#" class="btn sapphire secondary">Download</a>
-								</td>
-							</tr>
-						</table>
-
-						<table class="column">
-							<tr>
-								<td>
-									<img class="featured-image" src="/images/feature-image-1.png" alt="">
-								</td>
-							</tr>
-						</table>
-					</td>
-				</tr>
-			</table>
-
-			<!--
-				Module: Email-banner-two-column
-				Variant: Sage
-			-->
-			<table class="email-banner-two-column module sage">
-				<tr class="content">
-					<td class="layout_two-column container">
-						<table class="column">
-							<tr>
-								<td>
-									<h1>Factor Report</h1>
-									<p class="py-20">Monthly analysis of global<br/> market factors</p>
-									<a href="#" class="btn onyx">Download</a>
-								</td>
-							</tr>
-						</table>
-
-						<table class="column">
-							<tr>
-								<td>
-									<img class="featured-image" src="/images/feature-image-2.png" alt="">
-								</td>
-							</tr>
-						</table>
-					</td>
-				</tr>
-			</table>
-
-			<!--
-				Module: Email-banner-two-column
-				Variant: Onyx
-			-->
-			<table class="email-banner-two-column module onyx">
-				<tr class="content">
-					<td class="layout_two-column container">
-						<table class="column">
-							<tr>
-								<td>
-									<h1>Factor Report</h1>
-									<p class="py-20">Monthly analysis of global<br/> market factors</p>
-									<a href="#" class="btn onyx secondary">Download</a>
-								</td>
-							</tr>
-						</table>
-
-						<table class="column">
-							<tr>
-								<td>
-									<img class="featured-image" src="/images/feature-image-3.png" alt="">
-								</td>
-							</tr>
-						</table>
-					</td>
-				</tr>
-			</table>
-
-			<!--
-				Module: Email-banner-two-column
-				Variant: Clarity
-			-->
-			<table class="email-banner-two-column module clarity">
-				<tr class="content">
-					<td class="layout_two-column container">
-						<table class="column">
-							<tr>
-								<td>
-									<h1>Factor Report</h1>
-									<p class="py-20">Monthly analysis of global<br/> market factors</p>
-									<a href="#" class="btn sapphire">Download</a>
-								</td>
-							</tr>
-						</table>
-
-						<table class="column">
-							<tr>
-								<td>
-									<img class="featured-image" src="/images/feature-image-1.png" alt="">
-								</td>
-							</tr>
-						</table>
-					</td>
-				</tr>
-			</table>
-
-			<!--
-				Module: Email-banner-two-column
-				Variant: Currency
-			-->
-			<table class="email-banner-two-column module currency">
-				<tr class="content">
-					<td class="layout_two-column container">
-						<table class="column">
-							<tr>
-								<td>
-									<h1>Factor Report</h1>
-									<p class="py-20">Monthly analysis of global<br/> market factors</p>
-									<a href="#" class="btn onyx secondary">Download</a>
-								</td>
-							</tr>
-						</table>
-
-						<table class="column">
-							<tr>
-								<td>
-									<img class="featured-image" src="/images/feature-image-3.png" alt="">
-								</td>
-							</tr>
-						</table>
-					</td>
-				</tr>
-			</table>
+<!-- ----------
+  Email Heading
+---------- -->
 
 			<!--
 				Module: Email-heading
