Added email heading small headline module

--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -69,6 +69,15 @@
 <!-- ----------
   Email Heading
 ---------- -->
+@@include('modules/email-heading/small-headline/email-heading.small.html')
+@@include('modules/email-heading/small-headline/email-heading.small.sapphire.html')
+@@include('modules/email-heading/small-headline/email-heading.small.onyx.html')
+@@include('modules/email-heading/small-headline/email-heading.small.sage.html')
+@@include('modules/email-heading/small-headline/email-heading.small.clarity.html')
+@@include('modules/email-heading/small-headline/email-heading.small.currency.html')
+<!-- ----------
+  END Email Heading
+---------- -->
 
 			<!--
 				Module: Email-heading
