added email heading large headline version and variantes

--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -69,185 +69,27 @@
 <!-- ----------
   Email Heading
 ---------- -->
+@@include('modules/email-heading/email-heading.html')
 @@include('modules/email-heading/email-heading.small.html')
+
+@@include('modules/email-heading/email-heading.sapphire.html')
 @@include('modules/email-heading/email-heading.small.sapphire.html')
+
+@@include('modules/email-heading/email-heading.onyx.html')
 @@include('modules/email-heading/email-heading.small.onyx.html')
+
+@@include('modules/email-heading/email-heading.sage.html')
 @@include('modules/email-heading/email-heading.small.sage.html')
+
+@@include('modules/email-heading/email-heading.clarity.html')
 @@include('modules/email-heading/email-heading.small.clarity.html')
+
+@@include('modules/email-heading/email-heading.currency.html')
 @@include('modules/email-heading/email-heading.small.currency.html')
+
 <!-- ----------
   END Email Heading
 ---------- -->
-
-			<!--
-				Module: Email-heading
-				Variant: Large Headline, Default
-			-->
-			<table class="email-heading module">
-				<tr class="content">
-					<td class="container">
-						<table class="column left">
-							<tr>
-								<td>
-									<!-- 
-										Component: Eyebrow
-										Variant: Default
-									-->
-									<table class="eyebrow">
-										<tr>
-											<td class="circle"></td>
-											<td>What's trending</td>
-										</tr>
-									</table>
-		
-									<h1>Lazard <br/> Connect</h1>
-									<p class="pt-20">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
-								</td>
-							</tr>
-						</table>
-
-						<table class="column right table-content-right">
-								<tr>
-									<td>
-										<!--
-											Component: Button
-											Variant: Sapphire
-										-->
-										<a href="#" class="btn sapphire">Download</a>
-									</td>
-								</tr>
-						</table>
-					</td>
-				</tr>
-			</table>
-
-			<!--
-				Module: Email-heading
-				Variant: Small Headline, Default
-			-->
-			<table class="email-heading module">
-				<tr class="content">
-					<td class="container">
-						<table class="column left">
-							<tr>
-								<td>
-									<!-- 
-										Component: Eyebrow
-										Variant: Default
-									-->
-									<table class="eyebrow">
-										<tr>
-											<td class="circle"></td>
-											<td>What's trending</td>
-										</tr>
-									</table>
-		
-									<h3>Geopolitical and market implications of the conflict in the Middle East</h3>
-									<p class="pt-20">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
-								</td>
-							</tr>
-						</table>
-
-						<table class="column right table-content-right">
-								<tr>
-									<td>
-										<!--
-											Component: Button
-											Variant: Sapphire
-										-->
-										<a href="#" class="btn sapphire">Visit</a>
-									</td>
-								</tr>
-						</table>
-					</td>
-				</tr>
-			</table>
-
-			<!--
-				Module: Email-heading
-				Variant: Large Headline, Sapphire
-			-->
-			<table class="email-heading module sapphire">
-				<tr class="content">
-					<td class="container">
-						<table class="column left">
-							<tr>
-								<td>
-									<!-- 
-										Component: Eyebrow
-										Variant: Default
-									-->
-									<table class="eyebrow light">
-										<tr>
-											<td class="circle"></td>
-											<td>What's trending</td>
-										</tr>
-									</table>
-		
-									<h1>Lazard <br/> Connect</h1>
-									<p class="pt-20">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
-								</td>
-							</tr>
-						</table>
-
-						<table class="column right table-content-right">
-								<tr>
-									<td>
-										<!--
-											Component: Button
-											Variant: Sapphire
-										-->
-										<a href="#" class="btn sapphire secondary">Download</a>
-									</td>
-								</tr>
-						</table>
-					</td>
-				</tr>
-			</table>
-
-			<!--
-				Module: Email-heading
-				Variant: Small Headline, Sapphire
-			-->
-			<table class="email-heading module sapphire">
-				<tr class="content">
-					<td class="container">
-						<table class="column left">
-							<tr>
-								<td>
-									<!-- 
-										Component: Eyebrow
-										Variant: Default
-									-->
-									<table class="eyebrow light">
-										<tr>
-											<td class="circle"></td>
-											<td>What's trending</td>
-										</tr>
-									</table>
-		
-									<h3>Geopolitical and market implications of the conflict in the Middle East</h3>
-									<p class="pt-20">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
-								</td>
-							</tr>
-						</table>
-
-						<table class="column right table-content-right">
-							<tbody>
-								<tr>
-									<td>
-										<!--
-											Component: Button
-											Variant: Sapphire
-										-->
-										<a href="#" class="btn sapphire secondary">Visit</a>
-									</td>
-								</tr>
-							</tbody>
-						</table>
-					</td>
-				</tr>
-			</table>
 		</center>
 	</body>
 </html>
