Moved some files, added one-column content module

--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -89,6 +89,15 @@
 <!-- ----------
   END Email Heading
 ---------- -->
+
+<!-- ----------
+  One Column Content
+---------- -->
+@@include('modules/one-column-content/one-column-content.html')
+<!-- ----------
+  END One Column Content
+---------- -->
+
 		</center>
 	</body>
 </html>
