--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -21,6 +21,7 @@ body {
 	color: var(--onyx);
 }
 
+/* Typography */
 h1, h2, h3, p {
 	font-weight: 400;
 	margin: 0;
@@ -44,18 +45,62 @@ h4 {
 	font-size: 16px;
 }
 
+.subheading-1 {
+	font-size: 24px;
+	font-weight: 700;
+	letter-spacing: -0.24px;
+	line-height: 95%;
+}
+
+.subheading-2 {
+	font-size: 16px;
+	font-weight: 400;
+	letter-spacing: -0.16px;
+	line-height: 120%;
+}
+
+.subheading-3 {
+	font-size: 12px;
+	font-weight: 700;
+	letter-spacing: -0.12px;
+	line-height: 120%;
+}
+
+.disclaimer {
+	font-size: 9px;
+}
+
 p {
 	font-size: 14px;
+	font-weight: 400;
 	line-height: 120%; /* ---------- 16.8px ---------- */
 	letter-spacing: -0.14px;
 }
+
+p.p2 {
+	font-size: 12;
+	line-height: 140%;
+}
+
+p.p3 {
+	font-size: 10px;
+	letter-spacing: -0.1px;
+}
+/* END Typography */
 
 table {
 	border-spacing: 0;
 }
 
-a {
+a, li.link {
 	color: var(--sapphire);
+}
+
+ul {
+	margin-left: 0;
+	padding-left: 16px;
+	line-height: 160%;
+	font-weight: 400;
 }
 
 .wrapper {
@@ -89,11 +134,20 @@ a {
 }
 
 .py-20 {
-	padding: 20px 0;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
 .pt-20 {
-	padding: 20px 0 0;
+	padding-top: 20px;
+}
+
+.pt-16 {
+	padding-top: 16px
+}
+
+.mr-16 {
+	margin-right: 16px;
 }
 
 /* 
