--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -9,8 +9,35 @@
 	</head>
 	<body>
 		<center class="wrapper">
+<!-- ----------
+	Button Components
+---------- -->
+			@@include('components/buttons/button.sapphire.html')
+			<br/><br/>
+			@@include('components/buttons/button.sapphire.small.html')
+			<br/><br/>
+			@@include('components/buttons/button.sapphire.secondary.html')
+			<br/><br/>
+			@@include('components/buttons/button.sapphire.secondary.small.html')
+			<br/><br/>
+			@@include('components/buttons/button.onyx.html')
+			<br/><br/>
+			@@include('components/buttons/button.onyx.small.html')
+			<br/><br/>
+			@@include('components/buttons/button.onyx.secondary.html')
+			<br/><br/>
+			@@include('components/buttons/button.onyx.secondary.small.html')
+<!-- ----------
+	END Button Components
+---------- -->
 
+<!-- ----------
+	Preheader Modules
+---------- -->
 			@@include('modules/preheader/template.html')
+<!-- ----------
+	END Preheader Modules
+---------- -->
 
 <!-- ----------
 	Logo Banner Modules
@@ -93,7 +120,7 @@
 <!-- ----------
   One Column Content
 ---------- -->
-@@include('modules/one-column-content/one-column-content.html')
+			@@include('modules/one-column-content/one-column-content.html')
 <!-- ----------
   END One Column Content
 ---------- -->
