small updates, I'm dont for today...

--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -125,6 +125,14 @@
   END One Column Content
 ---------- -->
 
+<!-- ----------
+  One CTA Banner
+---------- -->
+@@include('modules/cta-banner/template.html')
+<!-- ----------
+  END One CTA Banner
+---------- -->
+
 		</center>
 	</body>
 </html>
